# waveshare-modbus-relay

./: .gitignore  INSTALL.txt  LICENSE  README.md  install.ps1  pyproject.toml  run.sh
src/waveshare_modbus/: __init__.py  __main__.py  api.py  gui.py  modbus_client.py  presets.json  presets.py
