[project]
name = "waveshare-modbus"
version = "1.0.0"
description = "Waveshare Modbus POE ETH Relay Control Tool with GUI and REST API"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/waveshare_modbus"]

[project.scripts]
waveshare-modbus = "waveshare_modbus.__main__:main"
